opam-version: "2.0"
name: "caml2csl"
version: "dev"
maintainer: "Guillaume Huysmans <ghuysmans99@gmail.com>"
authors: "Bruno Barras <barras@pauillac.inria.fr>"
homepage: "https://github.com/ghuysmans/caml2csl/"
bug-reports: "https://github.com/ghuysmans/caml2csl/issues"
dev-repo: "git+https://github.com/ghuysmans/caml2csl/"
build: [["dune" "build" "-p" name "-j" jobs]]
depends: [
  "dune"
]
synopsis: "Caml Light to Caml Special Light (almost OCaml) translator"
